--- a/style/style.css
+++ b/style/style.css
@@ -29,17 +29,17 @@ a {
 input {
   outline: none;
   background: transparent;
+  border-radius: 30px 0 0 30px;
   border: none;
-}
-input,
-input::placeholder {
   color: var(--text-white);
+  padding: 10px 20px;
 }
 .search_part {
   display: flex;
   align-items: center;
   border-radius: 30px;
   border: 1px solid var(--border-grey);
+  overflow: hidden;
 }
 .logo img {
   width: 100px;
