--- a/style/style.css
+++ b/style/style.css
@@ -64,3 +64,19 @@ input {
 .logo img {
   width: 100px;
 }
+.account {
+  display: flex;
+  align-items: center;
+}
+.profile {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  border-radius: 50%;
+  background: green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
