--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
   --bg-white: #fff;
   --bg-grey: #222222;
   --border-grey: #9c9c9c;
+  --border-grey_2: #303030;
   --border-white: #fff;
   --text-grey: #9c9c9c;
   --text-white: #fff;
@@ -51,15 +52,22 @@ input {
   background: transparent;
   border-radius: 30px 0 0 30px;
   border: none;
+  font-size: 18px;
   color: var(--text-white);
-  padding: 10px 20px;
+  padding: 0 20px;
 }
 .search_part {
   display: flex;
   align-items: center;
   border-radius: 30px;
-  border: 1px solid var(--border-grey);
+  border: 1px solid var(--border-grey_2);
   overflow: hidden;
+}
+.search_svg {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  background: var(--bg-grey);
 }
 .logo img {
   width: 100px;
