--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,7 @@ a, i {
   margin: 10px 30px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .menu_bar-logo {
   display: flex;
@@ -54,16 +55,35 @@ input {
   border: none;
   font-size: 18px;
   color: var(--text-white);
+  max-width: 100%;
   padding: 0 20px;
 }
+.search_section {
+  display: flex;
+  align-items: center;
+  max-width: 100%;
+  gap: 20px;
+}
 .search_part {
+  max-width: 100%;
   display: flex;
   align-items: center;
   border-radius: 30px;
   border: 1px solid var(--border-grey_2);
   overflow: hidden;
 }
+.micro {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: var(--bg-grey);
+}
 .search_svg {
+  cursor: pointer;
   display: flex;
   align-items: center;
   padding: 10px 20px;
@@ -75,6 +95,11 @@ input {
 .account {
   display: flex;
   align-items: center;
+  gap: 20px;
+}
+.icon {
+  width: 25px;
+  height: 25px;
 }
 .profile {
   width: 30px;
