--- a/style/style.css
+++ b/style/style.css
@@ -117,7 +117,7 @@ input {
 }
 .guide-content {
   max-width: 230px;
-  height: 500px;
+  /* height: 500px; */
   overflow-y: scroll;
   position: sticky;
   margin: 0 10px;
