--- a/style/style.css
+++ b/style/style.css
@@ -150,3 +150,9 @@ input {
 .guide div:hover {
   background: var(--hover-bg);
 }
+@media screen and (max-width: 768px) {
+  
+}
+@media only screen and (max-width: 768px) {
+  
+}
