--- a/style/style.css
+++ b/style/style.css
@@ -165,3 +165,10 @@ input {
 }
 .youtube-part-mein {
 }
+.activ {
+  background: #f1f1f1;
+}
+.pages div {
+  background: #272727;
+  padding: 5px 10px;
+}
