--- a/style/style.css
+++ b/style/style.css
@@ -165,13 +165,18 @@ input {
 }
 .youtube-part-mein {
 }
+.pages {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
 .activ {
   background: #f1f1f1!important;
   color: #272727;
 }
 .pages div {
   background: #272727;
-  border-radius: 10px;
+  border-radius: 7px;
   padding: 5px 10px;
   font-weight: 600;
 }
