--- a/style/style.css
+++ b/style/style.css
@@ -177,6 +177,7 @@ input {
 .pages div {
   background: #272727;
   border-radius: 7px;
+  font-size: 15px;
   padding: 5px 10px;
   font-weight: 600;
 }
