--- a/style/style.css
+++ b/style/style.css
@@ -174,7 +174,7 @@ input {
   background: #f1f1f1!important;
   color: #272727;
 }
-.pages div {
+.splide__slide div {
   background: #272727;
   border-radius: 7px;
   font-size: 15px;
